New folder/Github/force-app/main/default/objects/Contact/fields/Card_Value__c.field-meta.xml
<CustomField>
    <fullName>Card_Value__c</fullName>
    <label>Card Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>