New folder/Github/force-app/main/default/objects/Contact/fields/Total_Usage_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Usage_Hours__c</fullName>
    <label>Total Usage(Hours)</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>